--- a/TNAI_FinalProject.API/appsettings.json
+++ b/TNAI_FinalProject.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "AppDbContext": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=FinalProjectTnai;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;MultipleActiveResultSets=True"
+    "AppDbContext": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=TNAI_FINALPROJECT.DATABASE;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;MultipleActiveResultSets=True;"
   },
   "Logging": {
     "LogLevel": {
@@ -8,5 +8,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "YourSecretKeyHere",
+    "Issuer": "YourIssuer",
+    "Audience": "YourAudience"
+  }
 }
